<resources>
    <string name="app_name">Country Information</string>

    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>

    <string name="km_2_unit_format">%.2f k㎡</string>

    <string name="common_name">Common Name:</string>
    <string name="official_name">Official Name:</string>
    <string name="capital">Capital:</string>
    <string name="region">Region:</string>
    <string name="subregion">Subregion:</string>
    <string name="area">Area:</string>
    <string name="currency">Currency:</string>
    <string name="currency_symbol">Currency symbol:</string>
    <string name="google_maps">Google Maps:</string>
    <string name="go_to_google_maps">Go to Google maps</string>
</resources>