<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="country"
            type="com.hanuszczak.countryinformation.model.domain.Country" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.detail.DetailFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:title="@{country.nameCommon}">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:imgDescription="@{country.nameOfficial}"
                    app:imgUrl="@{country.flagUrl}"
                    app:layout_collapseMode="parallax"
                    tools:ignore="ContentDescription"
                    tools:src="@drawable/ic_broken_image" />

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.motion.widget.MotionLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutDescription="@xml/detail_motion">

                <LinearLayout
                    android:id="@+id/linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/common_name"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:text="@{country.nameCommon}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        tools:text="Cuntry information" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/official_name"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:text="@{country.nameOfficial}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        tools:text="Cuntry information" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/capital"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:text="@{country.capital}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        tools:text="Cuntry information" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/region"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:text="@{country.region}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        tools:text="Cuntry information" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/subregion"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:text="@{country.subregion}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        tools:text="Cuntry information" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/area"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        app:areaUnit="@{country.area}"
                        tools:text="Cuntry information" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/currency"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:text="@{country.currencyName}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        tools:text="Cuntry information" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/currency_symbol"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:text="@{country.currencySymbol}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        tools:text="Cuntry information" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/google_maps"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                    <ImageView
                        android:id="@+id/google_maps_img"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="start"
                        android:contentDescription="@string/go_to_google_maps"
                        android:scaleType="centerCrop"
                        android:src="@drawable/google_maps" />

                </LinearLayout>

            </androidx.constraintlayout.motion.widget.MotionLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</layout>